# efficiency-app

./: .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.yml  gunicorn.py  main.py  pyproject.toml  pytest.ini  requirements.txt
app/controllers/: __init__.py  excels.py
app/repositories/: __init__.py  cases.py  causes.py  data.py  data_detail.py  data_detail_root_cause.py  excels.py  headers.py  transaction.py  variables.py
app/resources/: __init__.py  cases.py  excels.py
app/routes/: __init__.py  cases.py  data.py  excels.py  variables.py
app/schemas/: __init__.py  case.py  data.py  excel.py  variable.py  variable_cause.py
app/seeds/: __init__.py  case.py  variables.py
app/utils/: __init__.py  response.py  util.py
core/: config.py  server.py
core/cache/: cache_manager.py  custom_key_maker.py  redis_backend.py
core/controller/: base.py
core/exceptions/: __init__.py  error_handler.py
core/factory/: __init__.py  base.py  data.py  variable.py
core/repository/: base.py
core/schema/: __init__.py
core/security/: __init__.py  jwt_verif.py
core/utils/: __init__.py  datetime.py  formula.py  read_excel.py  readmacro.py  util.py
dummy_data/: TFELINK.xlsm
src/: config.py  server.py
src/models/: __init__.py
src/repositories/: __init__.py  case_inputs.py  case_outputs.py  cases.py  causes.py  excels.py  headers.py  transaction.py  units.py  variables.py
src/resources/: __init__.py  authentication.py  case_inputs.py  case_outputs.py  cases.py  data.py  data_details.py  excels.py  transaction.py  transaction_data.py  units.py  variable_causes.py  variable_headers.py  variables.py
src/routes/: __init__.py  authentication.py  case_inputs.py  case_outputs.py  cases.py  excels.py  transactions.py  units.py  variables.py
src/schemas/: __init__.py  case.py  data.py  excel.py  variable.py
src/seeds/: __init__.py  case.py  excels.py  units.py  variables.py
src/utils/: __init__.py  decode_image.py  error_handler.py  formula.py  jwt_verif.py  read_excel.py  readmacro.py  response.py  util.py
tests/: conftest.py  test_excels.py  utils.py
worker/: __init__.py
worker/tasks/: __init__.py
(+26 files in other folders)
