[tool.poetry]
name = "efficiency-app"
version = "0.1.0"
description = "Api For digital twin app"
authors = ["Cizz22 <cisatraa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4"
alembic = "1.13.2"
amqp = "5.2.0"
aniso8601 = "9.0.1"
annotated-types = "0.7.0"
anyio = "4.4.0"
async-timeout = "4.0.3"
attrs = "24.2.0"
bcrypt = "4.2.0"
billiard = "4.2.0"
blinker = "1.8.2"
celery = "5.4.0"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
coverage = "7.6.1"
exceptiongroup = "1.2.2"
flask = "3.0.3"
flask-bcrypt = "1.0.1"
flask-cors = "4.0.1"
flask-jwt-extended = "4.6.0"
flask-marshmallow = "1.2.1"
flask-migrate = "4.0.7"
flask-restful = "0.3.10"
flask-restplus = "0.13.0"
flask-seeder = "1.2.0"
flask-sqlalchemy = "3.1.1"
greenlet = "3.0.3"
gunicorn = "22.0.0"
idna = "3.7"
importlib-metadata = "8.2.0"
iniconfig = "2.0.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
kombu = "5.4.0"
mako = "1.3.5"
markupsafe = "2.1.5"
marshmallow = "3.22.0"
marshmallow-sqlalchemy = "1.1.0"
numpy = "2.1.0"
packaging = "24.1"
pandas = "2.2.2"
pluggy = "1.5.0"
prompt-toolkit = "3.0.47"
psycopg2-binary = "2.9.9"
pydantic = "2.8.2"
pydantic-core = "2.20.1"
pyjwt = "2.9.0"
pytest = "8.3.2"
pytest-cov = "5.0.0"
pytest-sugar = "1.0.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.1"
redis = "5.0.8"
referencing = "0.35.1"
requests = "2.32.3"
rpds-py = "0.20.0"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.32"
starlette = "0.38.2"
termcolor = "2.4.0"
tomli = "2.0.1"
typing-extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.2"
vine = "5.1.0"
wcwidth = "0.2.13"
werkzeug = "3.0.3"
zipp = "3.20.0"
digital-twin-migration = {git = "https://github.com/Cizz22/digital-twin-migration"}


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
